更新版本 beta nz-zorro 0.7 beta4

--- a/src/app/shared/business/bsn-async-tree/bsn-async-tree.component.html
+++ b/src/app/shared/business/bsn-async-tree/bsn-async-tree.component.html
@@ -1,5 +1,5 @@
 <nz-tree 
-    [nzTreeData]="treeData" 
+    [(ngModel)]="treeData" 
     [nzAsyncData]="config.asyncData" 
     [nzDefaultExpandAll]="config.expandAll"
     [nzCheckable]="config.checkable" 
