--- a/src/app/routes/settings/component-setting/component-setting.component.html
+++ b/src/app/routes/settings/component-setting/component-setting.component.html
@@ -1,124 +1,108 @@
-<!-- <page-header [title]=""></page-header>
-<div nz-row [nzGutter]="8">
-    <div nz-col [nzSpan]="24">
+<page-header [title]=""></page-header>
+<nz-row [nzGutter]="8">
+    <nz-col [nzSpan]="24">
         <nz-card>
-            <ng-template #body>
-                <form nz-form (ngSubmit)="_submitForm($event)" [nzLayout]="'inline'">
-                    <div nz-form-item nz-row>
-                        <div nz-form-label>
-                            <label [attr.for]="'功能模块'">功能模块</label>
-                        </div>
-                        <div nz-form-control>
-                            <nz-cascader [ngModelOptions]="{standalone: true}" [class.class123]="true" [nzOptions]="_funcOptions" [(ngModel)]="_funcValue"
-                                (nzChange)="_changeModuleValue($event)" (nzSelectionChange)="_onSelectionChange($event)" [nzPlaceHolder]="'请选择功能模块'"
-                                (nzLoad)="_loadLayoutData($event)" [nzExpandTrigger]="'hover'">
-                            </nz-cascader>
-                        </div>
-                    </div>
-                    <div nz-form-item nz-row>
-                        <div nz-col nz-form-control>
-                            <div nz-form-label>
-                                <label [attr.for]="'布局'">模块布局列表</label>
-                            </div>
-                            <nz-select style="width:120px;" [(ngModel)]="_layoutNameValue" (ngModelChange)="_changeLayoutName($event)" [nzPlaceHolder]="'选择布局名称'"
-                                [ngModelOptions]="{standalone: true}">
-                                <nz-option *ngFor="let option of _layoutList" [nzLabel]="option.label" [nzValue]="option.value">
-                                </nz-option>
-                            </nz-select>
-                        </div>
-                    </div>
 
-                </form>
-            </ng-template>
+            <form nz-form (ngSubmit)="_submitForm($event)" [nzLayout]="'inline'">
+                <nz-form-item>
+                    <nz-form-label>
+                        <label [attr.for]="'功能模块'">功能模块</label>
+                    </nz-form-label>
+                    <nz-form-control>
+                        <nz-cascader [ngModelOptions]="{standalone: true}" [class.class123]="true" [nzOptions]="_funcOptions" [(ngModel)]="_funcValue"
+                            (nzChange)="_changeModuleValue($event)" (nzSelectionChange)="_onSelectionChange($event)" [nzPlaceHolder]="'请选择功能模块'"
+                            (nzLoad)="_loadLayoutData($event)" [nzExpandTrigger]="'hover'">
+                        </nz-cascader>
+                    </nz-form-control>
+                </nz-form-item>
+                <nz-form-item>
+                    <nz-form-label>
+                        <label [attr.for]="'模块布局列表'">模块布局列表</label>
+                    </nz-form-label>
+                    <nz-form-control>
+                        <nz-select style="width:120px;" [(ngModel)]="_layoutNameValue" (ngModelChange)="_changeLayoutName($event)" [nzPlaceHolder]="'选择布局名称'"
+                            [ngModelOptions]="{standalone: true}">
+                            <nz-option *ngFor="let option of _layoutList" [nzLabel]="option.label" [nzValue]="option.value">
+                            </nz-option>
+                        </nz-select>
+                    </nz-form-control>
+                </nz-form-item>
+            </form>
+
         </nz-card>
-    </div>
+    </nz-col>
 
-</div>
-<div nz-row [nzGutter]="8">
-    <div nz-col [nzSpan]="8">
+</nz-row>
+<nz-row [nzGutter]="8">
+    <nz-col [nzSpan]="8">
         <nz-card>
-            <nz-tree [nzNodes]="nodes" [nzOptions]="options" (nzActivate)="onActivate($event)" [nzAllowChildLinkage]="treeconfig.nzAllowChildLinkage"
+            <!--  <nz-tree [nzNodes]="nodes" [nzOptions]="options" (nzActivate)="onActivate($event)" [nzAllowChildLinkage]="treeconfig.nzAllowChildLinkage"
                 [nzAllowParentLinkage]="treeconfig.nzAllowParentLinkage" [nzCheckable]="treeconfig.nzCheckable" [nzShowLine]="treeconfig.nzShowLine">
+            </nz-tree> -->
+            <nz-tree [(ngModel)]="treeData" [nzAsyncData]="treeconfig.asyncData" [nzDefaultExpandAll]="treeconfig.expandAll" [nzCheckable]="treeconfig.checkable"
+                [nzShowLine]="treeconfig.showLine" (nzClick)="onMouseAction('clickNode', $event)">
             </nz-tree>
+            <!--   <cn-bsn-tree [config]="tree_Config"></cn-bsn-tree> -->
         </nz-card>
-    </div>
-    <div nz-col [nzSpan]="16">
-        <div nz-row [nzGutter]="8">
-            <div nz-col [nzSpan]="24">
+
+    </nz-col>
+    <nz-col [nzSpan]="16">
+        <nz-row [nzGutter]="8">
+            <nz-col [nzSpan]="24">
                 <nz-card>
-                    <ng-template #body>
-                        <nz-tabset [nzType]="'line'">
 
-                            <nz-tab>
-                                <ng-template #nzTabHeading>
-                                    <i></i>
-                                    数据集设置
-                                </ng-template>
-                                <div>
-                                    <div nz-row [nzGutter]="8">
-                                        <div nz-col [nzSpan]="24">
-                                            <cn-code-edit #editor></cn-code-edit>
-                                        </div>
-                                        <div nz-col [nzSpan]="24">
-                                            <br>
-                                            <button nz-button [nzType]="'primary'" [nzSize]="'default'" (click)="saveSql($event)">保存</button>
-                                        </div>
+                    <nz-tabset [nzType]="'line'">
 
+                        <nz-tab nzTitle="数据集设置">
+                            <div>
+                                <div nz-row [nzGutter]="8">
+                                    <div nz-col [nzSpan]="24">
+                                        <cn-code-edit #editor></cn-code-edit>
                                     </div>
-                                    <div nz-row [nzGutter]="8">
-                                        <div nz-col [nzSpan]="24">
-                                            <nz-tabset [nzType]="'line'">
-                                                <nz-tab>
-                                                    <ng-template #nzTabHeading>
-                                                        <i></i>
-                                                        字段
-                                                    </ng-template>
-                                                    <div>
-                                                        <div bsn-data-table [config]="fildConfig" [dataList]="dataList"></div>
-
-                                                    </div>
-                                                </nz-tab>
-                                                <nz-tab>
-                                                    <ng-template #nzTabHeading>
-                                                        <i></i>
-                                                        参数
-                                                    </ng-template>
-                                                    <div>
-                                                        <div bsn-data-table [config]="parameterConfig" [dataList]="dataList"></div>
-                                                    </div>
-                                                </nz-tab>
-                                            </nz-tabset>
-                                        </div>
+                                    <div nz-col [nzSpan]="24">
+                                        <br>
+                                        <button nz-button [nzType]="'primary'" [nzSize]="'default'" (click)="saveSql($event)">保存</button>
                                     </div>
 
                                 </div>
-                            </nz-tab>
-                            <nz-tab>
-                                <ng-template #nzTabHeading>
-                                    <i></i>
-                                    属性设置
-                                </ng-template>
-                                <div>
-                                    <cn-form-resolver [config]="attributeConfig" [dataList]="dataList"></cn-form-resolver>
-                                </div>
-                            </nz-tab>
-                            <nz-tab>
-                                <ng-template #nzTabHeading>
-                                    <i></i>
-                                    业务对象
-                                </ng-template>
-                                <div>
-                                    <div nz-row [nzGutter]="8">
-                                        <div nz-col [nzSpan]="24">
-                                            <div bsn-data-table [config]="tempConfig" [dataList]="tempdataList"></div>                                            
-                                        </div>
+                                <div nz-row [nzGutter]="8">
+                                    <div nz-col [nzSpan]="24">
+                                        <nz-tabset [nzType]="'line'">
+                                            <nz-tab nzTitle="字段">
+                                                <div>
+                                                    <div bsn-data-table [config]="fildConfig" [dataList]="dataList"></div>
+
+                                                </div>
+                                            </nz-tab>
+                                            <nz-tab nzTitle="参数">
+                                                <div>
+                                                    <div bsn-data-table [config]="parameterConfig" [dataList]="dataList"></div>
+                                                </div>
+                                            </nz-tab>
+                                        </nz-tabset>
                                     </div>
                                 </div>
-                            </nz-tab>
-                        </nz-tabset>
-                    </ng-template>
+
+                            </div>
+                        </nz-tab>
+                        <nz-tab nzTitle="属性设置">
+                            <div>
+                                <cn-form-resolver [config]="attributeConfig" [dataList]="dataList"></cn-form-resolver>
+                            </div>
+                        </nz-tab>
+                        <nz-tab nzTitle="业务对象">
+                            <div>
+                                <div nz-row [nzGutter]="8">
+                                    <div nz-col [nzSpan]="24">
+                                        <div bsn-data-table [config]="tempConfig" [dataList]="tempdataList"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </nz-tab>
+                    </nz-tabset>
+
                 </nz-card>
-            </div>
-        </div>
-    </div>
-</div> -->
+            </nz-col>
+        </nz-row>
+    </nz-col>
+</nz-row>
