完成组件编辑功能

--- a/src/app/routes/settings/layout-step-setting/layout-step-setting.component.html
+++ b/src/app/routes/settings/layout-step-setting/layout-step-setting.component.html
@@ -99,7 +99,7 @@
         </thead>
         <tbody>
             <ng-template ngFor let-data [ngForOf]="_tableDataSource">
-                <tr>
+                <tr (click)="selectRow(data)" [ngStyle]="{'background-color':data.selected?'rgb(236, 246, 253)':''}">
                     <td nzShowExpand [(nzExpand)]="data.expand"></td>
                     <td>{{data.Name}}</td>
                     <td>{{data.Template}}</td>
