--- a/src/app/shared/resolver/layout-resolver/layout-setting-resolver.component.html
+++ b/src/app/shared/resolver/layout-resolver/layout-setting-resolver.component.html
@@ -9,27 +9,18 @@
 
 <nz-card *ngIf="config.tabs">
     <nz-tabset [nzType]="'line'">
-        <nz-tab *ngFor="let tab of config.tabs">
+        <nz-tab *ngFor="let tab of config.tabs" [nzTitle]="nzTabHeading">
           <ng-template #nzTabHeading>
             <i [ngClass]="tab.icon"></i>
             {{tab.title}}
           </ng-template>
-          <ng-container *ngFor="let cfg of tab.viewCfg">
-            <cn-layout-setting-resolver
-              [layoutId]="layoutId"
-              *ngIf="cfg.tabs" [config]="cfg"></cn-layout-setting-resolver>
-            <cn-component-setting-resolver
-              [blockId]="cfg.id"
-              [layoutId]="layoutId"
-              *ngIf="!cfg.tabs" [config]="cfg"></cn-component-setting-resolver>
-          </ng-container>
-          <!-- <cn-layout-resolver [config]="tab.viewCfg"></cn-layout-resolver>-->
+          <cn-component-setting-resolver
+          [blockId]="tab.id"
+          [layoutId]="layoutId"
+          [config]="tab.viewCfg"></cn-component-setting-resolver>
         </nz-tab>
       </nz-tabset>
-      <cn-tabs-resolver></cn-tabs-resolver>
 </nz-card>
-
-
 
 <nz-card *ngIf="!config.rows && !config.tabs" nzTitle="{{config.title}}">
     <cn-component-setting-resolver 
