完善模块功能

--- a/src/app/routes/passport/login/login.component.html
+++ b/src/app/routes/passport/login/login.component.html
@@ -22,6 +22,7 @@
             </nz-form-item>
         </nz-tab>
         <nz-tab nzTitle="解析平台登录">
+            <nz-alert *ngIf="errorApp" [nzType]="'error'" [nzMessage]="errorApp" [nzShowIcon]="true" class="mb-lg"></nz-alert>
             <nz-form-item>
                 <nz-form-control>
                     <nz-input-group nzSize="large" nzPrefixIcon="anticon anticon-user">
