--- a/src/app/routes/system/org-manager/org-manager.component.html
+++ b/src/app/routes/system/org-manager/org-manager.component.html
@@ -3,8 +3,8 @@
 <nz-card>
     <div class = "table-operations">
         <button nz-button  (click)="refresh()">刷新</button>
-        <button nz-button  (click)="add()">新增</button>
-        <button nz-button  (click)="update()">修改</button>
+        <button nz-button  (click)="showModalForComponent('Add')">新增</button>
+        <button nz-button  (click)="showModalForComponent('Edit')">修改</button>
         <button nz-button  (click)="delete()">删除</button>
     </div>
     <nz-table #nzTable
@@ -33,32 +33,29 @@
         </thead>
         <tbody>
 
-        <tr *ngFor="let item of nzTable.data">
-        <td nzShowCheckbox  [(nzChecked)]="item.checked"> </td>
-        <td>{{item.Name}}</td>
-        <td >{{item.ShortName}}</td>
-        <td >{{item.Code}}</td>
-        <td >{{item.Order}}</td>
-        <td >{{item.CreateTime | date}}</td>
-        </tr>
+        <!--<tr *ngFor="let item of nzTable.data">-->
+        <!--<td nzShowCheckbox  [(nzChecked)]="item.checked"> </td>-->
+        <!--<td>{{item.Name}}</td>-->
+        <!--<td >{{item.ShortName}}</td>-->
+        <!--<td >{{item.Code}}</td>-->
+        <!--<td >{{item.Order}}</td>-->
+        <!--<td >{{item.CreateTime | date}}</td>-->
+        <!--</tr>-->
 
-        <!--<ng-template ngFor let-data [ngForOf]="nzTable.data">-->
-            <!--<ng-template ngFor let-item [ngForOf]="expandDataCache[data.id]">-->
-                <!--<tr *ngIf="(item.parent&&item.parent.expand)||!(item.parent)">-->
-                    <!--<td [nzIndentSize]="item.level*20" [(nzExpand)]="item.expand" (nzExpandChange)="collapse(expandDataCache[data.id],item,$event)"  [nzShowExpand]="!!item.children">-->
-                        <!--{{item.text}}-->
-                    <!--</td>-->
-                    <!--<td >{{item.link}}</td>-->
-                    <!--<td >{{item.hide}}</td>-->
-                    <!--<td >{{item.order}}</td>-->
-                    <!--&lt;!&ndash;<td >{{item.projid}}</td>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<td >{{item.applyid}}</td>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<td >{{item.platcustomerid}}</td>&ndash;&gt;-->
-                    <!--<td >{{item.remark}}</td>-->
-                    <!--<td >{{item.createtime | date}}</td>-->
-                <!--</tr>-->
-            <!--</ng-template>-->
-        <!--</ng-template>-->
+        <ng-template ngFor let-data [ngForOf]="nzTable.data">
+            <ng-template ngFor let-item [ngForOf]="expandDataCache[data.Id]">
+                <tr *ngIf="(item.parent && item.parent.expand)||!(item.parent)">
+                    <td  [nzDisabled]="!!item.children"  nzShowCheckbox  [nzChecked]="false" (nzCheckedChange)="refChecked($event,item)">
+                    <td [nzIndentSize]="item.level*20" [(nzExpand)]="item.expand" (nzExpandChange)="collapse(expandDataCache[data.Id],item,$event)"  [nzShowExpand]="!!item.children">
+                        {{item.Name}}
+                    </td>
+                    <td >{{item.ShortName}}</td>
+                    <td >{{item.Code}}</td>
+                    <td >{{item.Order}}</td>
+                    <td >{{item.CreateTime | date}}</td>
+                </tr>
+            </ng-template>
+        </ng-template>
         </tbody>
         <ng-template #totalTemplate let-total let-range="range">
             {{range[0]}}-{{range[1]}} / {{total}} 条
