--- a/src/app/routes/system/org-manager/org-operation.component.html
+++ b/src/app/routes/system/org-manager/org-operation.component.html
@@ -9,7 +9,7 @@
     </nz-form-item>
 
     <nz-form-item>
-        <nz-form-label nz-col [nzSm]="6" [nzXs]="24" nzRequired mzFor="ParentId">上级部门</nz-form-label>
+        <nz-form-label nz-col [nzSm]="6" [nzXs]="24" >上级部门</nz-form-label>
         <nz-form-control nz-col [nzSm]="14" [nzXs]="24">
             <nz-cascader
                 formControlName = "ParentId"
