--- a/src/app/routes/system/data-manager/entity-operation.component.html
+++ b/src/app/routes/system/data-manager/entity-operation.component.html
@@ -8,7 +8,7 @@
         </nz-form-control>
     </nz-form-item>
     <nz-form-item>
-        <nz-form-label nz-col [nzSm]="6" [nzXs]="24" nzRequired mzFor="Caption">描述</nz-form-label>
+        <nz-form-label nz-col [nzSm]="6" [nzXs]="24">描述</nz-form-label>
         <nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
             <input nz-input  formControlName="Caption">
         </nz-form-control>
@@ -59,7 +59,7 @@
     </nz-form-item>
 
     <nz-form-item >
-        <nz-form-label nz-col [nzSm]="6" [nzXs]="24" >排序</nz-form-label>
+        <nz-form-label nz-col [nzSm]="6" [nzXs]="24" nzRequired mzFor="SortCode">排序</nz-form-label>
         <nz-form-control nz-col [nzSm]="14" [nzXs]="24" >
             <nz-input-number [nzSize]="'small'" formControlName="SortCode" ></nz-input-number>
         </nz-form-control>
