--- a/src/app/shared/components/cn-form-input/cn-form-input.component.html
+++ b/src/app/shared/components/cn-form-input/cn-form-input.component.html
@@ -1,6 +1,6 @@
 <nz-form-item>
   <nz-form-label nz-col [nzSm]="config.labelSize" [nzXs]="24">
-    <label [attr.for]="config.name" nz-form-item-required>{{config.label}}</label>
+   {{config.label}}
   </nz-form-label>
   <nz-form-control [formGroup]="formGroup" [nzSm]="config.controlSize" [nzXs]="24">
     <nz-input-group 
