--- a/src/app/routes/settings/operation-setting/operation-setting.component.html
+++ b/src/app/routes/settings/operation-setting/operation-setting.component.html
@@ -38,7 +38,7 @@
         [nzCheckable]="treeconfig.nzCheckable" [nzShowLine]="treeconfig.nzShowLine">
       </nz-tree> -->
       <cn-bsn-tree 
-        [config]="treeConfig"
+        [config]="tree_Config"
       ></cn-bsn-tree>
     </nz-card>
   </div>
