add show case template

--- a/src/app/shared/resolver/layout-resolver/layout-resolver.component.html
+++ b/src/app/shared/resolver/layout-resolver/layout-resolver.component.html
@@ -2,28 +2,29 @@
   <div nz-row [nzGutter]="8" *ngFor="let row of config.rows">
     <div nz-col *ngFor="let c of row.row.cols" [nzSpan]="c.span" [nzSm]="c.size.nzSm" [nzXs]="c.size.nzXs" [nzMd]="c.size.nzMd"
       [nzLg]="c.size.nzLg" [nzXl]="c.size.nzXl">
-      <cn-layout-resolver [config]="c"></cn-layout-resolver>
+      <cn-layout-resolver *ngFor="let cfg of c.viewCfg" [layoutId]="layoutId" [config]="cfg"></cn-layout-resolver>
     </div>
   </div>
 </ng-container>
 
 <nz-card *ngIf="config.tabs">
     <nz-tabset [nzType]="'line'">
-        <nz-tab *ngFor="let tab of config.tabs" [nzTitle]="titleTemplate">
-          <ng-template #titleTemplate>
+        <nz-tab *ngFor="let tab of config.tabs" [nzTitle]="nzTabHeading">
+          <ng-template #nzTabHeading>
             <i [ngClass]="tab.icon"></i>
             {{tab.title}}
           </ng-template>
-          <ng-container *ngFor="let cfg of tab.viewCfg">
-            <cn-layout-resolver *ngIf="cfg.tabs" [config]="cfg"></cn-layout-resolver>
-            <cn-component-resolver *ngIf="!cfg.tabs" [config]="cfg"></cn-component-resolver>
-  
-          </ng-container>
-          <!-- <cn-layout-resolver [config]="tab.viewCfg"></cn-layout-resolver>-->
+          <cn-component-resolver
+          [blockId]="tab.id"
+          [layoutId]="layoutId"
+          [config]="tab.viewCfg"></cn-component-resolver>
         </nz-tab>
       </nz-tabset>
 </nz-card>
 
 <nz-card *ngIf="!config.rows && !config.tabs" nzTitle="{{config.title}}">
-    <cn-component-resolver [config]="config"></cn-component-resolver>
+    <cn-component-resolver 
+    [layoutId]="layoutId" 
+    [blockId]="config.id" 
+    [config]="config"></cn-component-resolver>
 </nz-card>
