--- a/src/app/routes/template/mulit-table/mulit-table.component.html
+++ b/src/app/routes/template/mulit-table/mulit-table.component.html
@@ -1,1 +1,2 @@
-<page-header [title]="'Page Name'"></page-header>
+<page-header [title]="'单表示例'"></page-header>
+<cn-layout-resolver [config]="config"></cn-layout-resolver>
