--- a/src/app/shared/resolver/form-resolver/form-resolver.component.html
+++ b/src/app/shared/resolver/form-resolver/form-resolver.component.html
@@ -15,7 +15,7 @@
   
      <div class="table-operations" *ngIf="config.toolbar">
       <ng-container *ngFor="let bar of config.toolbar">
-        <input nz-button type="button" (click)="execFun(bar.name)" class="editable-add-btn" value="{{bar.text}}"/>
+        <input nz-button type="button" (click)="buttonAction(bar)" class="editable-add-btn" value="{{bar.text}}"/>
       </ng-container>
     </div> 
   </form>
