--- a/src/app/shared/resolver/form-resolver/form-resolver.component.html
+++ b/src/app/shared/resolver/form-resolver/form-resolver.component.html
@@ -1,22 +1,34 @@
-<!-- <nz-card nzType="inner" [nzTitle]="config.title?config.title:''">
-
-</nz-card> -->
 <nz-spin [nzSpinning]="isSpinning" [nzDelay]="300" nzTip='加载中...'>
-  <form nz-form [nzLayout]="config.layout?config.layout:'horizontal'" [formGroup]="form" (ngSubmit)="_submitForm($event)">
-    <!-- 垂直表单布局-->
-    <ng-container cnFormResolverDirective *ngFor="let field of config.forms" [formGroup]="form" [config]="field">
+  <form nz-form [nzLayout]="config.layout ? config.layout : 'horizontal'" [formGroup]="form" (ngSubmit)="_submitForm($event)">
+
+    <ng-container *ngFor="let formItem of config.forms">
+        <div nz-row [nzGutter]="24">
+            <ng-container *ngFor="let control of formItem.controls">
+                <!-- 垂直表单布局-->
+                <nz-form-item *ngIf="control.layout==='row'">
+                  <ng-container cnFormResolverDirective [formGroup]="form" [config]="control">
+        
+                  </ng-container>
+                </nz-form-item>
+        
+                <!-- 水平表单布局-->
+                <div nz-col [nzSpan]="control.span">
+                    <nz-form-item>
+                      <ng-container cnFormResolverDirective [formGroup]="form" [config]="control">
+        
+                      </ng-container>
+                    </nz-form-item>
+                  </div>
+              </ng-container> 
+        </div>
     </ng-container>
-    <!-- 水平表单布局-->
-    <!-- <div *ngIf="config.horizontial" nz-row [nzGutter]="8">
-      <div nz-col [nzSpan]="8" *ngFor="let field of config">
-        <ng-container cnFormResolverDirective [formGroup]="form" [config]="field"></ng-container>
-      </div>
-    </div> -->
-  
-     <div class="table-operations" *ngIf="config.toolbar">
-      <ng-container *ngFor="let bar of config.toolbar">
-        <input nz-button type="button" (click)="buttonAction(bar)" class="editable-add-btn" value="{{bar.text}}"/>
-      </ng-container>
-    </div> 
+
+    <div nz-row [nzGutter]="24" *ngIf="config.toolbar">
+        <nz-form-control nzOffset="20" nzSpan="4">
+            <ng-container *ngFor="let bar of config.toolbar">
+                <input nz-button type="button" (click)="buttonAction(bar)" class="editable-add-btn" value="{{bar.text}}" />
+            </ng-container>
+        </nz-form-control>
+    </div>
   </form>
 </nz-spin>
