--- a/src/app/shared/business/bsn-data-table/bsn-table.component.html
+++ b/src/app/shared/business/bsn-data-table/bsn-table.component.html
@@ -4,19 +4,9 @@
     </ng-container>
 </div>
 <!-- [nzDataSource]="dataList"nzAjaxData -->
-<nz-table #nzTable 
-    [nzData]="dataList" 
-    [nzSize]="'small'" 
-    [nzFrontPagination]="false"
-    [nzShowSizeChanger]="true" 
-    [nzTotal]="total" 
-    [(nzPageIndex)]="pageIndex"
-    [(nzPageSize)]="pageSize" 
-    [nzShowTotal]="totalTemplate" 
-    [nzPageSizeOptions]="this.config.pageSizeOptions" 
-    [nzLoading]="loading"
-    (nzPageIndexChange)="searchData()" 
-    (nzPageSizeChange)="searchData(true)" 
+<nz-table #nzTable [nzData]="dataList" [nzSize]="'small'" [nzFrontPagination]="false" [nzShowSizeChanger]="true" [nzTotal]="total"
+    [(nzPageIndex)]="pageIndex" [(nzPageSize)]="pageSize" [nzShowTotal]="totalTemplate" [nzPageSizeOptions]="this.config.pageSizeOptions"
+    [nzLoading]="loading" (nzPageIndexChange)="searchData()" (nzPageSizeChange)="searchData(true)" [nzTitle]="this.config.title?this.config.title:null"
     nzBordered>
     <ng-template #totalTemplate let-total>
         共 {{total}} 条
@@ -45,14 +35,8 @@
                             <div *ngIf="!editCache[data.key].edit">
                                 {{data[col.field]}}
                             </div>
-                            <ng-container 
-                                [bsnData]="tempParameters" 
-                                [rowData]="data" 
-                                [dataSet]="col.editor.options.dataSet?dataSet[col.editor.options.dataSet]:null"
-                                CnGridEditorDirective 
-                                *ngIf="editCache[data.key].edit" 
-                                [config]="col.editor.options"
-                                [value]="{key:data.key,name:col.editor.field,data:editCache[data.key].data[col.editor.field]}"
+                            <ng-container [bsnData]="tempParameters" [rowData]="data" [dataSet]="col.editor.options.dataSet?dataSet[col.editor.options.dataSet]:null"
+                                CnGridEditorDirective *ngIf="editCache[data.key].edit" [config]="col.editor.options" [value]="{key:data.key,name:col.editor.field,data:editCache[data.key].data[col.editor.field]}"
                                 (updateValue)="valueChange($event)">
                             </ng-container>
                         </ng-container>
