完善表格内容显示，测试SQL并实现动态SQL的前后交互

--- a/src/app/routes/template/tree-and-tabs/tree-and-tabs.component.html
+++ b/src/app/routes/template/tree-and-tabs/tree-and-tabs.component.html
@@ -1,1 +1,2 @@
-<page-header [title]="'Page Name'"></page-header>
+<page-header [title]="'树+标签页'"></page-header>
+<cn-layout-resolver [config]="config"></cn-layout-resolver>
