--- a/src/app/shared/resolver/layout-resolver/layout-resolver.component.html
+++ b/src/app/shared/resolver/layout-resolver/layout-resolver.component.html
@@ -2,31 +2,36 @@
   <div nz-row [nzGutter]="8" *ngFor="let row of config.rows">
     <div nz-col *ngFor="let c of row.row.cols" [nzSpan]="c.span" [nzSm]="c.size.nzSm" [nzXs]="c.size.nzXs" [nzMd]="c.size.nzMd"
       [nzLg]="c.size.nzLg" [nzXl]="c.size.nzXl">
-      <nz-card [nzTitle]="cardTitle">
-        <ng-template #cardTitle *ngIf="c.title">
+      <cn-layout-resolver [layoutId]="layoutId" [config]="c"></cn-layout-resolver>
+      <nz-card [nzTitle]="cardTitle" *ngIf="c.viewCfg">
+        <ng-template #cardTitle>
             <i class="{{c.icon}}"></i>
           {{c.title}}
         </ng-template>
         <cn-layout-resolver *ngFor="let cfg of c.viewCfg" [layoutId]="layoutId" [config]="cfg"></cn-layout-resolver>
       </nz-card>
+      <nz-card *ngIf="c.tabs">
+ 
+          <nz-tabset [nzType]="'line'">
+              <nz-tab *ngFor="let tab of c.tabs" [nzTitle]="nzTabHeading">
+                <ng-template #nzTabHeading>
+                  <i [ngClass]="tab.icon"></i>
+                  {{tab.title}}
+                </ng-template>
+                <cn-component-resolver *ngFor="let componentCfg of tab.viewCfg"
+                [blockId]="tab.id"
+                [layoutId]="layoutId"
+                [config]="componentCfg">
+               
+              </cn-component-resolver>
+              </nz-tab>
+            </nz-tabset>
+      </nz-card>
     </div>
   </div>
 </ng-container>
 
-<nz-card *ngIf="config.tabs">
-    <nz-tabset [nzType]="'line'">
-        <nz-tab *ngFor="let tab of config.tabs" [nzTitle]="nzTabHeading">
-          <ng-template #nzTabHeading>
-            <i [ngClass]="tab.icon"></i>
-            {{tab.title}}
-          </ng-template>
-          <cn-component-resolver
-          [blockId]="tab.id"
-          [layoutId]="layoutId"
-          [config]="tab.viewCfg"></cn-component-resolver>
-        </nz-tab>
-      </nz-tabset>
-</nz-card>
+
 
 <cn-component-resolver  *ngIf="!config.rows && !config.tabs"
 [layoutId]="layoutId" 
