--- a/src/app/routes/template/tree-and-multi-table/tree-and-multi-table.component.html
+++ b/src/app/routes/template/tree-and-multi-table/tree-and-multi-table.component.html
@@ -1,1 +1,2 @@
-<page-header [title]="'Page Name'"></page-header>
+<page-header [title]="'树+主系表'"></page-header>
+<cn-layout-resolver [config]="config"></cn-layout-resolver>
