--- a/src/app/shared/business/bsn-data-table/bsn-table.component.html
+++ b/src/app/shared/business/bsn-data-table/bsn-table.component.html
@@ -1,34 +1,55 @@
 <div class="table-operations" *ngIf="config.toolbar">
     <ng-container *ngFor="let btn of config.toolbar">
-        <button nz-button (click)="toolbarAction(btn)" [attr.disabled]="btn.disabled" class="editable-add-btn">{{btn.text}}</button>
+        <button nz-button *ngIf="btn.type!=='group'" (click)="toolbarAction(btn)" [attr.disabled]="btn.disabled" class="editable-add-btn">
+            <i class="{{btn.icon}}"></i>{{btn.text}}</button>
+        <nz-dropdown-button *ngIf="btn.type==='group'">
+            <i class="{{btn.icon}}"></i>{{btn.text}}
+            <ul nz-menu>
+                <li nz-menu-item *ngFor="let b of btn.group">
+                    <a (click)="toolbarAction(b)">
+                        <i class="{{b.icon}}"></i>{{b.text}}</a>
+                </li>
+            </ul>
+        </nz-dropdown-button>
     </ng-container>
 </div>
-<div *ngIf="config.info" class="my-md">
-        <nz-alert [nzType]="'info'" [nzShowIcon]="true" [nzMessage]="message">
-            <ng-template #message>
-                已选择 <strong class="text-primary">{{checkedCount}}</strong> 项&nbsp;&nbsp;
-            </ng-template>
-        </nz-alert>
-</div>
 <!-- [nzDataSource]="dataList"nzAjaxData -->
-<nz-table #nzTable [nzData]="dataList" [nzSize]="'small'" [nzFrontPagination]="false" [nzShowSizeChanger]="true" [nzTotal]="total"
-    [(nzPageIndex)]="pageIndex" [(nzPageSize)]="pageSize" [nzShowTotal]="totalTemplate" [nzPageSizeOptions]="this.config.pageSizeOptions"
-    [nzLoading]="loading" (nzPageIndexChange)="searchData()" (nzPageSizeChange)="searchData(true)" [nzTitle]="this.config.title?this.config.title:null"
+<nz-table #nzTable 
+    [nzData]="dataList" 
+    [nzSize]="'small'" 
+    [nzFrontPagination]="false" 
+    [nzShowSizeChanger]="true" 
+    [nzTotal]="total"
+    [(nzPageIndex)]="pageIndex" 
+    [(nzPageSize)]="pageSize" 
+    [nzShowTotal]="totals" 
+    [nzPageSizeOptions]="this.config.pageSizeOptions"
+    [nzLoading]="loading" 
+    (nzPageIndexChange)="searchData()" 
+    (nzPageSizeChange)="searchData(true)" 
+    [nzTitle]="this.config.title?this.config.title:null"
+    [nzFooter]="footer"
     nzBordered>
-    <ng-template #totalTemplate let-total>
-        共 {{total}} 条
-    </ng-template>
-    <thead>
+    <thead (nzSortChange)="sort($event)" nzSingleSort>
         <tr>
-            <th nzShowCheckbox [(nzChecked)]="allChecked" [nzIndeterminate]="indeterminate" (nzCheckedChange)="checkAll($event)">
+            <th nzShowCheckbox 
+            [(nzChecked)]="allChecked" 
+            [nzIndeterminate]="indeterminate" 
+            (nzCheckedChange)="checkAll($event)"
+            >
             </th>
             <ng-container *ngFor="let col of config.columns">
-                <th nzShowSort *ngIf="!col.hidden" nzShowSort nzSortKey="sortMap[col.field]">
+                <th 
+                    [nzShowSort]="col.showSort" 
+                    [nzShowFilter]="col.showFilter" 
+                    [nzFilters]="col.editor.options.dataSet?dataSet[col.editor.options.dataSet]:null" 
+                    *ngIf="!col.hidden" 
+                    [nzSortKey]="col.field"
+                    (nzFilterChange)="columnFilter(col.editor.field, $event)"
+                >
                     <span>{{col.title}}</span>
-                    <!-- <nz-table-sort [(nzValue)]="sortMap[col.field]" (nzValueChange)="sort(col.field,$event)"></nz-table-sort> -->
                 </th>
             </ng-container>
-
         </tr>
     </thead>
     <tbody>
@@ -57,4 +78,11 @@
         </ng-container>
 
     </tbody>
+    <ng-template #footer>
+         已选择
+            <strong class="text-primary">{{checkedCount}}</strong> 项&nbsp;&nbsp;
+    </ng-template>
+    <ng-template #totals let-total>
+            共 {{total}} 条
+    </ng-template>
 </nz-table>
