--- a/src/app/shared/business/bsn-tree-table/bsn-tree-table.component.html
+++ b/src/app/shared/business/bsn-tree-table/bsn-tree-table.component.html
@@ -3,39 +3,101 @@
         <button nz-button (click)="toolbarAction(btn)" [attr.disabled]="btn.disabled" class="editable-add-btn">{{btn.text}}</button>
     </ng-container>
 </div>
-<nz-table #nzTable [nzData]="dataList"
- [nzShowSizeChanger]="true"
- [nzPageSizeOptions]="this.config.pageSizeOptions" 
- [nzShowTotal]="totalTemplate" 
- >
+<nz-table #nzTable 
+    [nzData]="dataList" 
+    [nzSize]="'small'" 
+    [nzFrontPagination]="false" 
+    [nzShowSizeChanger]="true" 
+    [nzTotal]="total"
+    [(nzPageIndex)]="pageIndex" 
+    [(nzPageSize)]="pageSize" 
+    [nzShowTotal]="totals" 
+    [nzPageSizeOptions]="this.config.pageSizeOptions"
+    [nzLoading]="loading" 
+    (nzPageIndexChange)="searchData()" 
+    (nzPageSizeChange)="searchData(true)" 
+    [nzTitle]="this.config.title?this.config.title:null"
+    [nzFooter]="footer"
+    nzBordered>
  <ng-template #totalTemplate let-total>
         共 {{total}} 条
  </ng-template>
-    <thead>
-        <tr>
-            <th nzWidth="40%">Name</th>
-            <ng-container *ngFor="let col of config.columns">
-                    <th nzShowSort *ngIf="!col.hidden" nzShowSort nzSortKey="sortMap[col.field]">
-                        <span>{{col.title}}</span>
-                    </th>
-            </ng-container>
-        </tr>
-      
-    </thead>
+ <thead (nzSortChange)="sort($event)" nzSingleSort>
+    <tr>
+        <th nzShowCheckbox 
+        [(nzChecked)]="allChecked" 
+        [nzIndeterminate]="indeterminate" 
+        (nzCheckedChange)="checkAll($event)"
+        >
+        </th>
+        <ng-template ngFor let-col [ngForOf]="config.columns">
+            <th 
+                [nzShowSort]="col.showSort" 
+                [nzShowFilter]="col.showFilter" 
+                [nzFilters]="col.editor.options.dataSet?dataSet[col.editor.options.dataSet]:null" 
+                *ngIf="!col.hidden" 
+                [nzSortKey]="col.field"
+                (nzFilterChange)="columnFilter(col.editor.field, $event)">
+                <span>{{col.title}}</span>
+            </th>
+        </ng-template>
+    </tr>
+</thead>
     <tbody>
+    <ng-template ngFor let-data [ngForOf]="nzTable.data">
+            <tr (click)="selectRow(data, $event)" [ngStyle]="{'background-color':data.selected?'rgb(236, 246, 253)':''}">
+                <td nzShowCheckbox [(nzChecked)]="data.checked" (nzCheckedChange)="refChecked()">
+                </td>
+                <ng-template ngFor let-col [ngForOf]="config.columns">
+                    <td *ngIf="!col.hidden">
+                        <ng-container *ngIf="col.editor">
+                            <div *ngIf="!editCache[data.key].edit">
+                                <span [ngClass]="[col.formatter ? setCellFont(data[col.field], col.formatter):'']">{{!col.dataType?data[col.field]:data[col.field] | date}}</span>
+                            </div>
+                            <ng-container [bsnData]="tempParameters" [rowData]="data" [dataSet]="col.editor.options.dataSet?dataSet[col.editor.options.dataSet]:null"
+                                CnGridEditorDirective *ngIf="editCache[data.key].edit" [config]="col.editor.options" [value]="{key:data.key,name:col.editor.field,data:editCache[data.key].data[col.editor.field]}"
+                                (updateValue)="valueChange($event)">
+                            </ng-container>
+                        </ng-container>
+                        <ng-container *ngIf="!col.editor">
+                            <span [ngClass]="[col.formatter ? setCellFont(data[col.field], col.formatter):'']">{{data[col.field]}}</span>
+                        </ng-container>
+
+                    </td>
+                </ng-template>
+            </tr>
+        </ng-template>
         <ng-template ngFor let-data [ngForOf]="nzTable.data">
             <ng-template ngFor let-item [ngForOf]="expandDataCache[data.key]">
-                <tr *ngIf="(item.parent&&item.parent.expand)||!(item.parent)">
-                    <td [nzIndentSize]="item.level*20" [nzShowExpand]="!!item.children" [(nzExpand)]="item.expand" (nzExpandChange)="collapse(expandDataCache[data.key],item,$event)">
-                        {{item.name}}
-                    </td>
-                    <ng-container *ngFor="let col of config.columns">
-                            <td *ngIf="!col.hidden">
-                                    {{item[col.field]}}
+                    <tr (click)="selectRow(data, $event)" [ngStyle]="{'background-color':data.selected?'rgb(236, 246, 253)':''}">
+                            <td nzShowCheckbox [(nzChecked)]="data.checked" (nzCheckedChange)="refChecked()">
                             </td>
-                        </ng-container>
-                </tr>
+                            <ng-template ngFor let-col [ngForOf]="config.columns">
+                                <td *ngIf="!col.hidden">
+                                    <ng-container *ngIf="col.editor">
+                                        <div *ngIf="!editCache[data.key].edit">
+                                            <span [ngClass]="[col.formatter ? setCellFont(data[col.field], col.formatter):'']">{{!col.dataType?data[col.field]:data[col.field] | date}}</span>
+                                        </div>
+                                        <ng-container [bsnData]="tempParameters" [rowData]="data" [dataSet]="col.editor.options.dataSet?dataSet[col.editor.options.dataSet]:null"
+                                            CnGridEditorDirective *ngIf="editCache[data.key].edit" [config]="col.editor.options" [value]="{key:data.key,name:col.editor.field,data:editCache[data.key].data[col.editor.field]}"
+                                            (updateValue)="valueChange($event)">
+                                        </ng-container>
+                                    </ng-container>
+                                    <ng-container *ngIf="!col.editor">
+                                        <span [ngClass]="[col.formatter ? setCellFont(data[col.field], col.formatter):'']">{{data[col.field]}}</span>
+                                    </ng-container>
+            
+                                </td>
+                            </ng-template>
+                        </tr>
             </ng-template>
         </ng-template>
     </tbody>
+    <ng-template #footer>
+        已选择
+           <strong class="text-primary">{{checkedCount}}</strong> 项&nbsp;&nbsp;
+   </ng-template>
+   <ng-template #totals let-total>
+           共 {{total}} 条
+   </ng-template>
 </nz-table>
